--- a/public/maps.html
+++ b/public/maps.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BankMaps • Tract Choropleth</title>
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
@@ -24,7 +25,9 @@
 
 <aside>
   <label>Year</label>
-  <select id="year"><option value="2024" selected>2024</option></select>
+  <select id="year">
+    <option value="2024" selected>2024</option>
+  </select>
 
   <label>Lender</label>
   <select id="lender"></select>
@@ -36,13 +39,11 @@ let map;
 let prevIds = new Set();
 let currentYear = "2024";
 
-// ✅ Use your custom style and tileset info
 const MAP_STYLE = 'mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk';
 const TILESETS = {
   "2024": { id: 'tracts2024', url: 'mapbox://stuartmaps.58y5r823', layer: '2024-1pvgy8' }
 };
 
-// Coloring gradient
 function choroplethPaint(){
   return {
     'fill-color': [
@@ -59,59 +60,58 @@ function choroplethPaint(){
       ],
       'rgba(0,0,0,0)'
     ],
-    'fill-opacity': [
-      'case',
-      ['has', 'value', ['feature-state']], 0.9, 0.1
-    ]
+    'fill-opacity': ['case', ['has', 'value', ['feature-state']], 0.9, 0.15]
   };
 }
 
 async function init(){
-  const status=document.getElementById('status');
+  const status = document.getElementById('status');
 
-  // Load token
-  const { token } = await fetch('/api/mapbox-token').then(r=>r.json()).catch(()=>({token:''}));
+  const { token } = await fetch('/api/mapbox-token').then(r => r.json()).catch(() => ({token:''}));
   if(!token.startsWith('pk.')){ status.textContent='Invalid Mapbox token.'; return; }
 
   mapboxgl.accessToken = token;
   map = new mapboxgl.Map({
     container:'map',
     style: MAP_STYLE,
-    center:[-98.5,39.8],
-    zoom:3.5
+    center:[-95, 38.5], // ensures the map shows immediately on page load
+    zoom:4.2
   });
   map.addControl(new mapboxgl.NavigationControl(),'top-right');
+
   await new Promise(res => map.once('load', res));
   status.textContent = 'Map ready.';
 
-  // Load lender list
-  const dd=document.getElementById('lender');
+  // Restore previously selected lender (if any)
+  const savedLender = localStorage.getItem('selectedLender');
+
+  // Populate lenders
+  const dd = document.getElementById('lender');
   const L = await fetch('/api/maps').then(r=>r.json()).catch(()=>({lenders:[]}));
-  dd.innerHTML=(L.lenders||[]).map(n=>`<option>${n}</option>`).join('');
-  dd.addEventListener('change', loadCounts);
+  dd.innerHTML = (L.lenders || []).map(n => `<option>${n}</option>`).join('');
+
+  if (savedLender && L.lenders.includes(savedLender)) {
+    dd.value = savedLender;
+  }
+
+  dd.addEventListener('change', () => {
+    localStorage.setItem('selectedLender', dd.value);
+    loadCounts();
+  });
 
   await updateTileset();
   await loadCounts();
 }
 
 async function updateTileset(){
-  const t=TILESETS[currentYear];
-  const status=document.getElementById('status');
+  const t = TILESETS[currentYear];
+  const status = document.getElementById('status');
   if(!t){ status.textContent=`No tileset for ${currentYear}`; return; }
 
-  // Remove old layers
-  for(const yr in TILESETS){
-    const layer=TILESETS[yr];
-    ['-choropleth','-outline'].forEach(s=>{
-      if(map.getLayer(layer.id+s)) map.removeLayer(layer.id+s);
-    });
-    if(map.getSource(layer.id)) map.removeSource(layer.id);
-  }
+  if(map.getSource(t.id)) return;
 
-  // Add source
   map.addSource(t.id, { type:'vector', url:t.url, promoteId:'GEOID' });
 
-  // Add layers
   map.addLayer({
     id: t.id+'-choropleth',
     type: 'fill',
@@ -124,49 +124,48 @@ async function updateTileset(){
     type: 'line',
     source: t.id,
     'source-layer': t.layer,
-    paint:{ 'line-color':'#000', 'line-width':0.5, 'line-opacity':0.4 }
+    paint:{ 'line-color':'#000', 'line-width':0.4, 'line-opacity':0.35 }
   });
 
   map.on('click', t.id+'-choropleth', (e)=>{
     if(!e.features.length) return;
-    const f=e.features[0];
-    const st=map.getFeatureState({source:t.id,'sourceLayer':t.layer,id:f.id});
-    alert(`GEOID: ${f.properties.GEOID}\nFeature ID: ${f.id}\nValue(state): ${JSON.stringify(st)}`);
+    const f = e.features[0];
+    const st = map.getFeatureState({source:t.id,'sourceLayer':t.layer,id:f.id});
+    alert(`GEOID: ${f.properties.GEOID}\nValue(state): ${JSON.stringify(st)}`);
   });
 
-  status.textContent='Tileset loaded. Ready for data.';
+  // Ensure it’s immediately visible
+  map.resize();
+  map.triggerRepaint();
+  status.textContent = 'Tileset loaded.';
 }
 
 async function loadCounts(){
-  const lender=document.getElementById('lender').value;
-  const status=document.getElementById('status');
-  const t=TILESETS[currentYear];
+  const lender = document.getElementById('lender').value;
+  const status = document.getElementById('status');
+  const t = TILESETS[currentYear];
   if(!t){ status.textContent=`No tileset for ${currentYear}`; return; }
 
-  const res=await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=${currentYear}`);
+  const res = await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=${currentYear}`);
   if(!res.ok){ status.textContent='Error: '+(await res.text()); return; }
-  const data=await res.json();
-  const rows=data.rows||[];
-  const counts=new Map(rows.map(r=>[String(r.GEOID),r.count]));
-  status.textContent=`Loaded ${counts.size} tracts. Coloring…`;
 
-  // Reset
-  for(const id of prevIds){
+  const data = await res.json();
+  const rows = data.rows || [];
+  const counts = new Map(rows.map(r => [String(r.GEOID), r.count]));
+  status.textContent = `Loaded ${counts.size} tracts. Coloring…`;
+
+  for (const id of prevIds) {
     map.setFeatureState({source:t.id,'sourceLayer':t.layer,id}, {value:null});
   }
   prevIds.clear();
 
-  let applied=0;
-  for(const [geoid,val] of counts.entries()){
+  for (const [geoid, val] of counts.entries()) {
     map.setFeatureState({source:t.id,'sourceLayer':t.layer,id:geoid}, {value:val});
     prevIds.add(geoid);
-    applied++;
   }
 
-  // Force repaint to reveal feature-state colors
   map.triggerRepaint();
-
-  status.textContent=`Colored ${applied} tracts. Click a tract to inspect.`;
+  status.textContent = `Colored ${counts.size} tracts.`;
 }
 
 init();
