--- a/public/maps.html
+++ b/public/maps.html
@@ -25,9 +25,7 @@
 
 <aside>
   <label>Year</label>
-  <select id="year">
-    <option value="2024" selected>2024</option>
-  </select>
+  <select id="year"><option value="2024" selected>2024</option></select>
 
   <label>Lender</label>
   <select id="lender"></select>
@@ -39,14 +37,15 @@ let map;
 let prevIds = new Set();
 let currentYear = "2024";
 
-// ✅ Your custom Mapbox style:
+// 🔹 your exact custom Mapbox style
 const MAP_STYLE = 'mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk';
 
-// ✅ Your existing tileset info:
+// 🔹 your tileset info
 const TILESETS = {
   "2024": { id: 'tracts2024', url: 'mapbox://stuartmaps.58y5r823', layer: '2024-1pvgy8' }
 };
 
+// color ramp
 function choroplethPaint(){
   return {
     'fill-color': [
@@ -68,37 +67,33 @@ function choroplethPaint(){
 }
 
 async function init(){
-  const status = document.getElementById('status');
-
-  const { token } = await fetch('/api/mapbox-token').then(r => r.json()).catch(() => ({token:''}));
+  const status=document.getElementById('status');
+  const { token } = await fetch('/api/mapbox-token').then(r=>r.json()).catch(()=>({token:''}));
   if(!token.startsWith('pk.')){ status.textContent='Invalid Mapbox token.'; return; }
 
   mapboxgl.accessToken = token;
   map = new mapboxgl.Map({
     container:'map',
-    style: MAP_STYLE, // ✅ your background style
+    style: MAP_STYLE,
     center:[-95, 38.5],
     zoom:4.2
   });
   map.addControl(new mapboxgl.NavigationControl(),'top-right');
 
-  await new Promise(res => map.once('load', res));
-  status.textContent = 'Map ready.';
+  // 🔹 Wait for style fully loaded
+  await new Promise(res => map.once('styledata', res));
+  await new Promise(res => map.once('idle', res));
+  status.textContent = 'Map style ready.';
 
-  // Restore previously selected lender
+  // persist lender
   const savedLender = localStorage.getItem('selectedLender');
 
-  // Populate lenders
-  const dd = document.getElementById('lender');
-  const L = await fetch('/api/maps').then(r=>r.json()).catch(()=>({lenders:[]}));
-  dd.innerHTML = (L.lenders || []).map(n => `<option>${n}</option>`).join('');
-
-  if (savedLender && L.lenders.includes(savedLender)) {
-    dd.value = savedLender;
-  }
-
-  dd.addEventListener('change', () => {
-    localStorage.setItem('selectedLender', dd.value);
+  const dd=document.getElementById('lender');
+  const L=await fetch('/api/maps').then(r=>r.json()).catch(()=>({lenders:[]}));
+  dd.innerHTML=(L.lenders||[]).map(n=>`<option>${n}</option>`).join('');
+  if(savedLender && L.lenders.includes(savedLender)) dd.value = savedLender;
+  dd.addEventListener('change',()=>{
+    localStorage.setItem('selectedLender',dd.value);
     loadCounts();
   });
 
@@ -107,68 +102,71 @@ async function init(){
 }
 
 async function updateTileset(){
-  const t = TILESETS[currentYear];
-  const status = document.getElementById('status');
+  const t=TILESETS[currentYear];
+  const status=document.getElementById('status');
   if(!t){ status.textContent=`No tileset for ${currentYear}`; return; }
 
-  if(map.getSource(t.id)) return;
+  // clear any existing
+  if(map.getLayer(t.id+'-choropleth')) map.removeLayer(t.id+'-choropleth');
+  if(map.getLayer(t.id+'-outline')) map.removeLayer(t.id+'-outline');
+  if(map.getSource(t.id)) map.removeSource(t.id);
 
-  map.addSource(t.id, { type:'vector', url:t.url, promoteId:'GEOID' });
+  map.addSource(t.id,{type:'vector',url:t.url,promoteId:'GEOID'});
 
   map.addLayer({
-    id: t.id+'-choropleth',
-    type: 'fill',
-    source: t.id,
-    'source-layer': t.layer,
-    paint: choroplethPaint()
+    id:t.id+'-choropleth',
+    type:'fill',
+    source:t.id,
+    'source-layer':t.layer,
+    paint:choroplethPaint()
   });
   map.addLayer({
-    id: t.id+'-outline',
-    type: 'line',
-    source: t.id,
-    'source-layer': t.layer,
-    paint:{ 'line-color':'#000', 'line-width':0.4, 'line-opacity':0.35 }
+    id:t.id+'-outline',
+    type:'line',
+    source:t.id,
+    'source-layer':t.layer,
+    paint:{'line-color':'#000','line-width':0.4,'line-opacity':0.35}
   });
 
-  map.on('click', t.id+'-choropleth', (e)=>{
+  map.on('click',t.id+'-choropleth',(e)=>{
     if(!e.features.length) return;
-    const f = e.features[0];
-    const st = map.getFeatureState({source:t.id,'sourceLayer':t.layer,id:f.id});
+    const f=e.features[0];
+    const st=map.getFeatureState({source:t.id,'sourceLayer':t.layer,id:f.id});
     alert(`GEOID: ${f.properties.GEOID}\nValue(state): ${JSON.stringify(st)}`);
   });
 
-  // Ensure the map is visible immediately
+  // force visible immediately
   map.resize();
   map.triggerRepaint();
-  status.textContent = 'Tileset loaded.';
+  status.textContent='Tileset loaded.';
 }
 
 async function loadCounts(){
-  const lender = document.getElementById('lender').value;
-  const status = document.getElementById('status');
-  const t = TILESETS[currentYear];
+  const lender=document.getElementById('lender').value;
+  const status=document.getElementById('status');
+  const t=TILESETS[currentYear];
   if(!t){ status.textContent=`No tileset for ${currentYear}`; return; }
 
-  const res = await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=${currentYear}`);
+  const res=await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=${currentYear}`);
   if(!res.ok){ status.textContent='Error: '+(await res.text()); return; }
 
-  const data = await res.json();
-  const rows = data.rows || [];
-  const counts = new Map(rows.map(r => [String(r.GEOID), r.count]));
-  status.textContent = `Loaded ${counts.size} tracts. Coloring…`;
+  const data=await res.json();
+  const rows=data.rows||[];
+  const counts=new Map(rows.map(r=>[String(r.GEOID),r.count]));
+  status.textContent=`Loaded ${counts.size} tracts. Coloring…`;
 
-  for (const id of prevIds) {
-    map.setFeatureState({source:t.id,'sourceLayer':t.layer,id}, {value:null});
+  for(const id of prevIds){
+    map.setFeatureState({source:t.id,'sourceLayer':t.layer,id},{value:null});
   }
   prevIds.clear();
 
-  for (const [geoid, val] of counts.entries()) {
-    map.setFeatureState({source:t.id,'sourceLayer':t.layer,id:geoid}, {value:val});
+  for(const [geoid,val] of counts.entries()){
+    map.setFeatureState({source:t.id,'sourceLayer':t.layer,id:geoid},{value:val});
     prevIds.add(geoid);
   }
 
   map.triggerRepaint();
-  status.textContent = `Colored ${counts.size} tracts.`;
+  status.textContent=`Colored ${counts.size} tracts.`;
 }
 
 init();
