--- a/public/mapbox-style-test.html
+++ b/public/mapbox-style-test.html
@@ -1,39 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mapbox Style Test</title>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  <style>html,body,#map{height:100%;margin:0}</style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Mapbox Style Test (diagnostic)</title>
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+<style>
+  html,body {height:100%;margin:0}
+  #top {position:fixed;z-index:2;top:8px;left:8px;background:#fff;padding:8px 10px;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,.12);font:13px/1.4 system-ui,Arial}
+  #map {position:absolute;inset:0}
+  code{background:#f3f3f3;padding:1px 4px;border-radius:4px}
+</style>
 </head>
 <body>
-  <div id="map"></div>
-  <script>
-    (async () => {
-      // QUICK TEST: hardcode a pk token here if you prefer
-      // const token = 'pk.xxxxx';  // remove after testing
-      // Or use your API:
-      const { token } = await fetch('/api/mapbox-token').then(r=>r.json()).catch(()=>({token:''}));
-      if(!token || !token.startsWith('pk.')) { alert('Missing/invalid Mapbox token'); return; }
+<div id="top">
+  <div><strong>Status:</strong> <span id="s">Starting…</span></div>
+  <div><small>Style: <code id="styleTxt">mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk</code></small></div>
+</div>
+<div id="map"></div>
 
-      mapboxgl.accessToken = token;
-      const styleURL = 'mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk';
+<script>
+(async () => {
+  const s = (t) => document.getElementById('s').textContent = t;
 
-      const map = new mapboxgl.Map({
-        container: 'map',
-        style: styleURL,
-        center: [-95, 38.5],
-        zoom: 4
-      });
+  // 1) Get token (or hardcode a known-good pk for this test)
+  let token = '';
+  try {
+    const j = await fetch('/api/mapbox-token').then(r => r.json());
+    token = j.token || '';
+  } catch(e) {}
+  // --- TEMP: uncomment to hardcode a pk token you know works, then test:
+  // token = 'pk.REPLACE_ME';
 
-      map.on('load', () => console.log('STYLE LOADED'));
-      map.on('error', (e) => {
-        console.error(e.error);
-        alert('Mapbox error: ' + (e?.error?.message || JSON.stringify(e)));
-      });
-    })();
-  </script>
+  if (!token || !token.startsWith('pk.')) {
+    s('Missing/invalid Mapbox token');
+    alert('Missing/invalid Mapbox token');
+    return;
+  }
+  mapboxgl.accessToken = token;
+
+  // 2) Control test: render default style (should ALWAYS show)
+  s('Rendering control style (light-v11)…');
+  const map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/light-v11',
+    center: [-95, 38.5],
+    zoom: 4
+  });
+  map.addControl(new mapboxgl.NavigationControl(), 'top-right');
+
+  await new Promise(res => map.once('load', res));
+  s('Control style loaded ✅ — trying your custom style next…');
+
+  // 3) Try your custom style; fetch the style JSON first so we can see HTTP status
+  const styleURL = 'https://api.mapbox.com/styles/v1/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk?access_token=' + encodeURIComponent(token);
+
+  let ok = false, status = 0, text = '';
+  try {
+    const r = await fetch(styleURL, { cache: 'no-store' });
+    status = r.status;
+    if (!r.ok) {
+      text = await r.text();
+      s(`Custom style fetch failed ❌ HTTP ${status}`);
+      alert(`Custom style fetch failed (HTTP ${status}). Body:\n${text}`);
+    } else {
+      ok = true;
+      s('Custom style JSON fetched ✅ — applying style…');
+    }
+  } catch (e) {
+    s('Custom style fetch threw an error ❌');
+    alert('Custom style fetch error: ' + e.message);
+  }
+
+  if (!ok) return;
+
+  // 4) Apply your custom style
+  map.setStyle('mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk');
+
+  // Wait for the new style to load (styledata → idle)
+  await new Promise(res => map.once('styledata', res).catch?.(()=>res()));
+  await new Promise(res => map.once('idle', res).catch?.(()=>res()));
+  s('Custom style applied ✅');
+
+  // Any mapbox errors?
+  map.on('error', (e) => {
+    console.error('Mapbox error:', e && e.error);
+    alert('Mapbox error: ' + (e?.error?.message || JSON.stringify(e)));
+  });
+})();
+</script>
 </body>
 </html>
