--- a/public/mapbox-style-test.html
+++ b/public/mapbox-style-test.html
@@ -53,10 +53,11 @@
 
     // Create the map
     const map = new mapboxgl.Map({
-      container: "map",
-      style: styleURL,
-      center: [-95, 38.5],  // USA center
-      zoom: 6
+  container: "map",
+  style: styleURL,
+  center: [-95, 38.5],
+  zoom: 6  // ← Change from 4 to 6
+});
     });
 
     map.on("load", () => {
