--- a/public/standard-map.html
+++ b/public/standard-map.html
@@ -38,8 +38,8 @@
     const status = document.getElementById("status");
 
     // USE MAPBOX'S OFFICIAL STREETS STYLE — ROADS, LABELS, WATER, EVERYTHING
-    const styleURL = "mapbox://styles/mapbox/streets-v12";
-
+    const styleURL = "mapbox://styles/stuartmaps/cmhnkxgu4000i01rz4n4naqa2";
+mapbox://styles/stuartmaps/cmhnkxgu4000i01rz4n4naqa2
     const map = new mapboxgl.Map({
       container: "map",
       style: styleURL,
